force-app/main/default/objects/Email_Template__c/Email_Template__c.object-meta.xml
<CustomObject>
    <label>Email Template</label>
    <nameField>
        <displayFormat>Email-{0000}</displayFormat>
        <label>Email Templates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>