force-app/main/default/objects/Email_Template__c/fields/BCC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>BCC_Email_Address__c</fullName>
    <label>BCC Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>