force-app/main/default/objects/Email_Template__c/fields/CC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Address__c</fullName>
    <label>CC Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>