force-app/main/default/objects/Email_Template__c/fields/Email_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Created_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Created Date</label>
    <type>Date</type>
</CustomField>