force-app/main/default/objects/Email_Template__c/fields/Email_From_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_From_Name__c</fullName>
    <label>Email From Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>