force-app/main/default/objects/Email_Template__c/fields/From_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Email_Address__c</fullName>
    <label>From Email Address</label>
    <type>Email</type>
</CustomField>