force-app/main/default/objects/Email_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email_From_Name__c</columns>
    <columns>From_Email_Address__c</columns>
    <columns>Email_Subject__c</columns>
    <columns>Email_Sent_Date__c</columns>
    <columns>Email_Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>